added menu of dictionaries for admin
